<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ServicioSocialFIA</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Opciones</string>
    <string name="title_activity_bdcontrol">BDControl</string>
    <string name="elija_rol">Elija rol</string>
    <string name="title_activity_gestion_precios">GestionPrecios</string>
    <string name="lblGestionPrecios">Gestion de Precios de Proyectos</string>
    <string name="lblAgregarPrecio">Nuevo Precio</string>
    <string name="lblConsultarPrecios">Cosnultar Precios</string>
    <string name="btnimgNuevoPrecio" />
    <string name="btnimgConsultarPrecio" />
    <string name="title_activity_autorizar_proyectos">AutorizarProyectos</string>
    <string name="lblTituloAutorizarProyectos">Proyectos Pendientes</string>
    <string name="title_activity_aprobar_reprobar_proyecto">AprobarReprobarProyecto</string>
    <string name="ClblNombreProyecto">Nombre:</string>
    <string name="CDescripcionProyecto">Descripcion</string>
    <string name="title_activity_insertar_precio_actividad">InsertarPrecioActividad</string>
    <string name="CImbuttonInsertPrecio" />
    <string name="title_activity_mod_elim_precios_actividad">ModElimPreciosActividad</string>
    <string name="ClblAlumno">Alumno</string>
    <string name="ClblBeneficiario">Beneficiario:</string>
    <string name="ClblModalidadProyecto">Modalidad:</string>
    <string name="CbtnAprobarProyecto">Aprobar</string>
    <string name="CbtnReprobarProyecto">Reprobar</string>
    <string name="ClblContenidoModalidadProyecto">Modalidad</string>
    <string name="ClblContenidoAlumno">Alumno</string>
    <string name="ClblContenidoBeneficiario">Beneficiario</string>
    <string name="ClblDescripcion">Descripción</string>
    <string name="title_activity_insertar_tipo_de_trabajo">InsertarTipoDeTrabajoActivity</string>
    <string name="ClblTituloInsertarTTrabajo">Nuevo Tipo de Trabajo</string>
    <string name="ClblTipoDeTrabajo">Ingrese el Código:</string>
    <string name="ClblIngresarTipoDeTrabajo">Ingrese el Tipo:</string>
    <string name="CHintIngresarCodigoTTrabajo">Ejemplo: T001</string>
    <string name="CbtnInsertarTipoDeTrabajo">Guardar</string>
    <string name="CHintNombreTipoTrabajo">Ingrese el  nombre del Tipo</string>
    <string name="ClblSeleccionarActividad">Seleccione Tipo de Trabajo</string>
    <string name="ClblPrecio">Ingrese el Precio:</string>
    <string name="CHintPrecio">$</string>
    <string name="ClblFechaIni">Ingrese la Fecha de Inicio:</string>
    <string name="CHintFechaIni">dd/mm/aaaa</string>
    <string name="ClblObservacion">Observación</string>
    <string name="CHinObservacion">Ingrese alguna Observacíon</string>
    <string name="CbtnInsertarPrecio">Guardar</string>
    <string name="title_activity_consultar_tipode_trabajo">ConsultarTipodeTrabajoActivity</string>
    <string name="ClblSeleccionarTipoDeTrabajo">Seleccione un Item</string>
    <string name="ClblIdTipoTrabajo">Id:</string>
    <string name="ClblContenidoIdTipoTrabajo">Tipo Trabajo</string>
    <string name="CHintMostarTipoTrabajo" />
    <string name="CbtnModificarTipoTrabajo">Modificar</string>
    <string name="CbtnEliminarTipoTrabajo">Eliminar</string>
    <string name="CbtnGuardarModTipoTrabajo">Guardar</string>
    <string name="ClblMostrarNombreTipoTrabajo">Nombrer Tipo de Trabajo</string>
    <string name="CbtnCancelarTipoTrabajo">Cancelar</string>
    <string name="title_activity_gestion_tipo_trabajo">GestionTipoTrabajoActivity</string>
    <string name="ClblTituloGestionTipoTrabajo">Gestion de Tipo de Trabajo</string>
    <string name="ClblAgregarTipoTrabajo">Agregar Nuevo</string>
    <string name="ClblModElimTipoTrabajo">Consultar, Modificar o Eliminar</string>
    <string name="title_activity_consultar_precios">ConsultarPreciosActivity</string>
    <string name="ClblTituloConsultarPrecios">Precios Ingresados</string>
    <string name="title_activity_mod_elim_precios">ModElimPreciosActivity</string>
    <string name="ClblRegistroPrecio">Registro Precio</string>
    <string name="ClblTipotrabajoPrecio">Tipo de Trabajo</string>
    <string name="ClblFechaIniprecio">Fecha Inicial:</string>
    <string name="ClblFechaFinPrecio">Fecha Fin:</string>
    <string name="ClblPrecioContendio">Precio:</string>
    <string name="ClblContenidoObservacionPrecio">Observación;</string>
    <string name="CbtnModPrecio">Modificar</string>
    <string name="CbtnElimPrecio">Eliminar</string>
    <string name="CbtnGMod">Guardar</string>
    <string name="CbtnCancelarPrecio">Cancelar</string>

</resources>
