<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".InsertarPrecioActividad" >

    <TextView
        android:id="@+id/ClblSelcciionarTipoTrabajo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:text="@string/ClblSeleccionarActividad"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/CEditTextPrecio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/ClblSelcciionarTipoTrabajo"
        android:layout_below="@+id/ClblPrecio"
        android:ems="10"
        android:hint="@string/CHintPrecio" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/ClblPrecio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/CspinnerTipoTrabajo"
        android:layout_centerHorizontal="true"
        android:text="@string/ClblPrecio"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Spinner
        android:id="@+id/CspinnerTipoTrabajo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/ClblSelcciionarTipoTrabajo" />

    <EditText
        android:id="@+id/CeditTextFechaIni"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/CEditTextPrecio"
        android:layout_below="@+id/ClblFechaIni"
        android:layout_marginTop="14dp"
        android:ems="10"
        android:hint="@string/CHintFechaIni"
        android:inputType="date" />

    <TextView
        android:id="@+id/ClblFechaIni"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/CeditTextFechaIni"
        android:layout_below="@+id/CEditTextPrecio"
        android:layout_marginTop="18dp"
        android:text="@string/ClblFechaIni"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/CeditTextObservacionPrecio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/CbtnInsertarPrecio"
        android:layout_alignLeft="@+id/CeditTextFechaIni"
        android:ems="10"
        android:hint="@string/CHinObservacion" />

    <Button
        android:id="@+id/CbtnInsertarPrecio"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/ClblPrecio"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="14dp"
        android:text="@string/CbtnInsertarPrecio" />

</RelativeLayout>
