<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".InsertarTipoDeTrabajoActivity" >

    <TextView
        android:id="@+id/ClblTituloIngresarTTrabajo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="18dp"
        android:text="@string/ClblTituloInsertarTTrabajo"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/ClblTituloIngresarTipoTrabajo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/CedittextTipoDeTrabajo"
        android:layout_below="@+id/ClblTituloIngresarTTrabajo"
        android:layout_marginTop="36dp"
        android:text="@string/ClblTipoDeTrabajo"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/CedittextCodigoTTrabajo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ClblTituloIngresarTipoTrabajo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="18dp"
        android:ems="10"
        android:hint="@string/CHintIngresarCodigoTTrabajo" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/ClblNombreTipoDeTrabajo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/ClblTituloIngresarTipoTrabajo"
        android:layout_centerVertical="true"
        android:text="@string/ClblIngresarTipoDeTrabajo"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/CbtnInsertarTTrabajo1"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/ClblNombreTipoDeTrabajo"
        android:layout_below="@+id/ClblNombreTipoDeTrabajo"
        android:layout_marginTop="83dp"
        android:text="@string/CbtnInsertarTipoDeTrabajo" />

    <EditText
        android:id="@+id/CedittextTipoDeTrabajo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/ClblTituloIngresarTTrabajo"
        android:layout_below="@+id/ClblNombreTipoDeTrabajo"
        android:ems="10"
        android:hint="@string/CHintNombreTipoTrabajo" />

</RelativeLayout>
