<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".GestionPrecios" >

    <TextView
        android:id="@+id/ClblcontenidoModalidad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/CImgButtonInsertPrecio"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="45dp"
        android:layout_marginLeft="17dp"
        android:text="@string/lblAgregarPrecio" />

    <ImageButton
        android:id="@+id/CImgButtonInsertPrecio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/CimgBtnModElimPrecio"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/CtextViewNombreProyecto"
        android:src="@drawable/images" />

    <ImageButton
        android:id="@+id/CimgBtnModElimPrecio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="16dp"
        android:src="@drawable/consultarprecio" />

    <TextView
        android:id="@+id/ClblTituloAlumno"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/CimgBtnModElimPrecio"
        android:layout_marginBottom="40dp"
        android:layout_toLeftOf="@+id/CImgButtonInsertPrecio"
        android:text="@string/lblConsultarPrecios" />

    <TextView
        android:id="@+id/CtextViewNombreProyecto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="18dp"
        android:text="@string/lblGestionPrecios" />

</RelativeLayout>
