<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".GestionTipoTrabajoActivity" >

    <TextView
        android:id="@+id/ClblGestionTipoTrabajo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="18dp"
        android:text="@string/ClblTituloGestionTipoTrabajo"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <ImageButton
        android:id="@+id/CimageButtonGestionTipoTrabajo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ClblModElimTipoTrabajo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="19dp"
        android:src="@drawable/descarga" />

    <ImageButton
        android:id="@+id/CimageButtonNuevoTipoTrabajo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/CimageButtonGestionTipoTrabajo"
        android:layout_below="@+id/ClblAgregarTipoTrabajo"
        android:layout_marginTop="15dp"
        android:src="@drawable/agregar" />

    <TextView
        android:id="@+id/ClblAgregarTipoTrabajo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/CimageButtonGestionTipoTrabajo"
        android:layout_below="@+id/ClblGestionTipoTrabajo"
        android:layout_marginTop="68dp"
        android:text="@string/ClblAgregarTipoTrabajo"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/ClblModElimTipoTrabajo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/CimageButtonNuevoTipoTrabajo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:text="@string/ClblModElimTipoTrabajo"
        android:textAppearance="?android:attr/textAppearanceMedium" />

</RelativeLayout>
